--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #f3f3f3;
+  overflow: hidden;
 }
 
 *{
@@ -9,62 +10,120 @@ body {
 }
 
 .header {
+  display: flex;
   padding: 10px 15px;
   box-sizing: border-box;
   background-color: #198754;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
 }
 
-.header ul{
-  display: flex;
-  list-style: none;
+.header-text{
+  text-align: center;
+  width: 100%;
 }
 
-
-.header ul a{
-  color: #fff;
-  text-decoration: none;
-  padding: 0 10px;
+.header-text h1{
+  font-size: 1.2rem;
+  color: #f9f9f9;
 }
 
 section{
-  height:calc(100vh - 65px);
+  height: calc(100vh - 67px);
+  overflow: auto;
+}
+
+.container {
   display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 10px;
+  padding: 10px;
+}
+
+.card {
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 2px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   padding: 10px 15px;
-  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.card{
-  box-shadow: 0 1px 2px 0 rgba(33, 33, 33, 0.14), 0 0 1px 0 rgba(0, 0, 0, 0.14);
-    border-radius: 2px;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    -webkit-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-    border: 0px solid transparent;
-    position: relative;
-    margin: 0 10px 0 10px;
-    width: 100%;
-    background: #fff;
+.card-header h5 {
+  font-size: 1.25rem;
+  margin: 0 0 10px 0;
 }
 
-.card-header{
-  padding: 15px 15px 12px;
-    border-bottom: 1px solid #dedede;
-    border-top-right-radius: 2px;
-    border-top-left-radius: 2px;
+.card-description {
+  flex-grow: 1;
+  margin-bottom: 10px;
 }
 
-.card-description{
-  padding: 12px 16px 11px;
+.card-description h5 {
+  font-size: 0.875rem;
+  color: #555;
+  margin: 0 0 5px 0;
 }
+
+.card-description h3 {
+  font-size: 1.5rem;
+  color: #333;
+  margin: 0;
+}
+
+.card-footer {
+  font-size: 0.875rem;
+  color: #888;
+}
+
+.text-success {
+  color: #28a745;
+}
+
+.no-margin {
+  margin: 0;
+}
+
+.small {
+  font-size: 0.875rem;
+}
+
+.hint-text {
+  color: #6c757d;
+}
+
+.product-card {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.product-thumbnail {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+.product-info h5 {
+  margin: 0;
+  font-size: 1rem;
+}
+
+.product-info p {
+  margin: 0;
+  font-size: 0.875rem;
+}
+
+
 /* Central CSS file for Hamburger */
 
 .hamburger {
-  width: 15px;
+  width: 12px;
   height: 3px;
   background-color: #333;
-  margin: 2px 10px;
+  margin: 2px 0;
   transition: 0.4s;
 }
 
@@ -73,30 +132,32 @@ section{
   flex-direction: column;
   justify-content: center;
   cursor: pointer;
+  width: 20px;
 }
 
 .menu {
   display: none;
   flex-direction: column;
-  background-color: #f9f9f9;
+  background-color: #fff;
   position: absolute;
-  top: 40px;
+  top: 42px;
   left: 0;
   right: 0;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   width: 250px;
-  height: calc(100vh - 39px);
+  /* height: calc(100vh - 42px); */
+  height: 100%;
 }
 
-.menu a {
-  padding: 12px 16px;
+.menu a, .menu button {
+  padding: 10px 15px;
   text-decoration: none;
   color: #333;
   display: block;
 }
 
-.menu a:hover {
+.menu a:hover, .menu button:hover {
   background-color: #ddd;
 }
 
@@ -116,6 +177,7 @@ section{
   opacity: 0;
 }
 
+/* Ending of the CSS file */
 
 .footer{
   border-top: 1px solid #dedede;
