Error Boundaries and few error handling mechanism

--- a/src/index.css
+++ b/src/index.css
@@ -177,6 +177,12 @@ section{
   opacity: 0;
 }
 
+.error-message{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
 /* Ending of the CSS file */
 
 .footer{
